[package]
name = "shita"
version = "0.1.1"
edition = "2021"
authors = ["Mrinal Paliwal"]
description = "A small utility to run timer in your shell"
repository = "https://github.com/mnpw/shita"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
notify-rust = "4"
indicatif = "0.17.2"
